// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pipeline Definitions > PLAN_MODE_PIPELINE artifacts 1`] = `
[
  {
    "artifacts": [
      {
        "editable": false,
        "filename": "01-plan.md",
        "label": "实施计划",
      },
    ],
    "name": "plan",
  },
  {
    "artifacts": [
      {
        "editable": false,
        "filename": "review-feedback.md",
        "label": "审核反馈",
      },
      {
        "editable": false,
        "filename": "review-history.json",
        "label": "审核历史",
      },
    ],
    "name": "review",
  },
  {
    "artifacts": [
      {
        "editable": false,
        "filename": "02-verify-report.md",
        "label": "验证报告",
      },
    ],
    "name": "verify",
  },
]
`;

exports[`Pipeline Definitions > PLAN_MODE_PIPELINE definition (snapshot) 1`] = `
{
  "mode": "plan-mode",
  "phases": [
    {
      "artifacts": [
        {
          "editable": false,
          "filename": "01-plan.md",
          "label": "实施计划",
        },
      ],
      "kind": "ai",
      "label": "规划",
      "name": "plan",
    },
    {
      "artifacts": [
        {
          "editable": false,
          "filename": "review-feedback.md",
          "label": "审核反馈",
        },
        {
          "editable": false,
          "filename": "review-history.json",
          "label": "审核历史",
        },
      ],
      "kind": "gate",
      "label": "审核",
      "name": "review",
      "retryable": false,
    },
    {
      "kind": "ai",
      "label": "实施",
      "name": "build",
    },
    {
      "artifacts": [
        {
          "editable": false,
          "filename": "02-verify-report.md",
          "label": "验证报告",
        },
      ],
      "kind": "ai",
      "label": "验证",
      "name": "verify",
    },
  ],
}
`;

exports[`Pipeline Definitions > PLAN_MODE_PIPELINE phase kinds 1`] = `
[
  {
    "kind": "ai",
    "name": "plan",
  },
  {
    "kind": "gate",
    "name": "review",
  },
  {
    "kind": "ai",
    "name": "build",
  },
  {
    "kind": "ai",
    "name": "verify",
  },
]
`;

exports[`Pipeline Definitions > PLAN_MODE_PIPELINE phase names 1`] = `
[
  "plan",
  "review",
  "build",
  "verify",
]
`;
